# eggmt

./: README.md  pyproject.toml
eggmt/: aegraph.py  basic.py  groebner.py  multiset.py  serialize.py  string_kb.py  z3graph.py
eggmt/todo/: egglog.py  everything.py  expr.py  parse.py  sexpr.py
eggmt/todo/rust/src/: main.rs
tests/: test_aegraph.py  test_basic.py  test_egg.py  test_groebner.py  test_multiset.py  test_string.py  test_z3.py
