[project]
name = "eggmt"
version = "0.1.1"
authors = [{ name = "Philip Zucker", email = "philzook58@gmail.com" }]
description = "Egraphs Module Theories"
readme = "README.md"
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = ["sympy>=1.13.3", "z3-solver >= 4.8"]
[project.urls]
homepage = "https://github.com/philzook58/eggmt"


[tool.uv]
dev-dependencies = ["pytest>=8.3.5"]
